move strip_relations.c

--- a/source/blender/sequencer/CMakeLists.txt
+++ b/source/blender/sequencer/CMakeLists.txt
@@ -71,7 +71,7 @@ set(SRC
   intern/sound.cc
   intern/strip_add.cc
   intern/strip_edit.cc
-  intern/strip_relations.c
+  intern/strip_relations.cc
   intern/strip_retiming.cc
   intern/strip_select.c
   intern/strip_time.c
